<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_poster_soiree"
            android:icon="@drawable/ic_add"
            android:title="@string/create" />
        <item
            android:id="@+id/nav_gérer_soiree"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/parties" />
        <item
            android:id="@+id/nav_list_soiree"
            android:icon="@drawable/ic_list"
            android:title="@string/list" />
    </group>

    <item android:title="@string/parametres">
        <menu>
            <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_profile"
                android:title="@string/profil" />
            <item
                android:id="@+id/nav_aide"
                android:icon="@drawable/ic_help"
                android:title="@string/aide" />
            <item
                android:id="@+id/nav_deconnexion"
                android:icon="@drawable/ic_disconnect"
                android:title="@string/deconnexion" />
        </menu>
    </item>






</menu>
